2015-12-10  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/system-2.d: New.
	* gas/aarch64/system-2.s: New.
	* gas/aarch64/system.d: Adjust expected output for HINT 16.

2015-11-27  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/float-fp16.d: New.
	* gas/aarch64/float-fp16.s: New.

2015-11-27  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/alias-2.d: Add tests for REV.
	* gas/aarch64/alias-2.s: Likewise.

2015-11-27  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/alias-2.d: New.
	* gas/aarch64/alias-2.s: New.

2015-11-27  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/sysreg-2.d: New.
	* gas/aarch64/sysreg-2.s: New.

2015-11-20  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/virthostext-directive.d: New.
	* gas/aarch64/virthostext.d: New.
	* gas/aarch64/virthostext.s: New.

2015-06-03  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/arm/armv8-a+rdma.d: New.
	* gas/arm/armv8-a+rdma.s: New.

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/arm/armv8-a+pan.d: New.
	* gas/arm/armv8-a+pan.s: New.

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/rdma-directive.d: New.
	* gas/aarch64/rdma.d: New.
	* gas/aarch64/rdma.s: New.

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/lor-directive.d: New.
	* gas/aarch64/lor.d: New.
	* gas/aarch64/lor.s: New

2015-06-01  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/pan-directive.d: New.
	* gas/aarch64/pan.d: New.
	* gas/aarch64/pan.s: New

2014-11-18  Jan Beulich  <jbeulich@suse.com>

	* gas/aarch64/crc32-directive.d: New.
	* gas/aarch64/crypto-directive.d: New.
	* gas/aarch64/crc32.s: Adjust to allow for directive use.
	* gas/aarch64/crypto.s: Likewise.

2015-03-10  Renlin Li  <renlin.li@arm.com>

	* gas/aarch64/ldst-reg-uns-imm.d: Adjust expected output.
	* gas/aarch64/ldst-reg-unscaled-imm.d: Likewise.
	* gas/aarch64/reloc-insn.d: Likewise.2015-03-10  Matthew Wahab  <matthew.wahab@arm.com>
